--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -7,6 +7,7 @@
   .content_layout
     margin-top: 0
     .region-content
+      margin-top: 20px
       margin-bottom: 15px
   #block-hsk-zymphonies-content
     margin: 0
@@ -213,8 +214,8 @@
   .path-frontpage
     .content_layout
       .region-content
-        +make-row()
         margin-top: 30px
+        +make-row()
     #block-views-block-events-list-block-1
       +make-md-column(6)
 
