--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -24,10 +24,12 @@
   #block-views-block-header-par-slideshow-block-1
     margin-bottom: 0
     .view-header-par-slideshow
+      .slick-slider
+        margin-bottom: 0
       .views-row
         position: relative
         .views-field-field-sli-text
-          background: #666
+          background: #959595
           +x-rem(font-size, 0.95)
           color: white
           line-height: 1.35
@@ -265,21 +267,26 @@
       .view-header-par-slideshow
         .views-row
           max-height: 400px
+          .views-field-field-sli-image
+            .field-content
+              display: flex
           .views-field-field-sli-text
             position: absolute
-            bottom: 30px
+            bottom: 20px
             width: 100%
             background: none
             text-align: left
             line-height: 1.5
             .inner-container
-              +make-md-column(5)
-              padding: 10px 20px 15px
+              +make-md-column(6)
+              padding: 7px 15px 10px
               background: rgba(70,70,70,0.6)
               color: white
               h3.slide-headline
                 padding: 0
                 margin-bottom: 0.25em
+                margin-top: 0.2em
+                margin-bottom: 0em
               a
                 color: white
                 +x-rem(font-size, 1.3)
@@ -331,6 +338,7 @@
       max-width: 1600px
       margin: auto
 
+
 /* End Media Query Desktop */
 
 /*------------------------------------------- */
@@ -342,5 +350,19 @@
   .path-frontpage
     .region-slideshow
       background: #888
+
+    #block-views-block-header-par-slideshow-block-1
+      max-height: 400px
+      max-width: 1600px
+      margin: auto
+      .view-header-par-slideshow
+        .views-row
+          .views-field-field-sli-text
+            .inner-container
+              +make-md-column(5)
+              padding: 10px 20px 15px
+              h3.slide-headline
+                margin-top: 0.4em
+                margin-bottom: 0.1em
 
 /* End Media Query Tablet */
