--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -358,6 +358,7 @@
       .view-header-par-slideshow
         .views-row
           .views-field-field-sli-text
+            bottom: 30px
             .inner-container
               +make-md-column(5)
               padding: 10px 20px 15px
