--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2847,6 +2847,14 @@ nav#block-hsk-footer {
 @media only screen and (min-width: 768px) {
   header {
     padding-top: 30px; }
+    header .navbar-toggle {
+      display: block;
+      position: relative;
+      float: right;
+      padding: 9px 10px;
+      margin-top: 8px;
+      margin-right: 15px;
+      margin-bottom: 8px; }
 
   .search-block-form {
     display: block; } }
@@ -2857,6 +2865,8 @@ nav#block-hsk-footer {
 /*------------------------------------------- */
 /*------------------------------------------- */
 @media only screen and (min-width: 992px) {
+  header .navbar-toggle {
+    display: none; }
   header.main-header nav {
     padding-bottom: 15px; }
     header.main-header nav .region-primary-menu {
