--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -124,8 +124,19 @@ nav#block-hsk-footer
 +breakpoint($breakpoint-tablet)
   header
     padding-top: 30px
-    //.navbar-toggle
-    //  display: block
+    .navbar-toggle
+      display: block
+      position: relative
+      float: right
+      padding: 9px 10px
+      margin-top: 8px
+      margin-right: 15px
+      margin-bottom: 8px
+      //.icon-bar
+      //  display: block
+      //  width: 22px
+      //  height: 2px
+      //  border-radius: 1px
 
   .search-block-form
     display: block
@@ -144,8 +155,8 @@ nav#block-hsk-footer
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop-narrow)
   header
-    //.navbar-toggle
-    //  display: none
+    .navbar-toggle
+      display: none
     //  position: relative
     //  float: right
     &.main-header
