--- a/themes/hsk_zymphonies/templates/page.html.twig
+++ b/themes/hsk_zymphonies/templates/page.html.twig
@@ -64,7 +64,7 @@
   <nav class="navbar topnav navbar-default" role="navigation">
     <div class="container">
       <div class="row">
-      <div class="navbar-header col-md-4">
+      <div class="navbar-header col-md-4 col-sm-12">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navigation">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
