--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -137,6 +137,9 @@ nav#block-hsk-footer
       //  width: 22px
       //  height: 2px
       //  border-radius: 1px
+    &.main-header
+      .navigation
+        clear: both
 
   .search-block-form
     display: block
@@ -165,6 +168,8 @@ nav#block-hsk-footer
         .region-primary-menu
           display: block
           margin-top: 8px
+      .navigation
+        clear: none
     #block-hsk-branding
       width: auto
       .logo
