--- a/themes/hsk_zymphonies/templates/page.html.twig
+++ b/themes/hsk_zymphonies/templates/page.html.twig
@@ -77,7 +77,7 @@
       </div>
 
       <!-- Navigation -->
-      <div class="col-md-8">
+      <div class="col-md-8 navigation">
         {% if page.primary_menu %}
           {{ page.primary_menu }}
         {% endif %}
