--- a/themes/hsk_zymphonies/sass/_forms.sass
+++ b/themes/hsk_zymphonies/sass/_forms.sass
@@ -13,7 +13,7 @@
   input.form-text
     color: #333
 
-form#webform-submission-anmeldung-als-vereinsmitglied-form
+form.webform-submission-anmeldung-als-vereinsmitglied-form
   input
     width: 100%
     &#edit-sepa-consent
@@ -36,7 +36,7 @@ form#webform-submission-anmeldung-als-vereinsmitglied-form
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-tablet)
-  form#webform-submission-anmeldung-als-vereinsmitglied-form
+  form.webform-submission-anmeldung-als-vereinsmitglied-form
     .description
       margin-left: 147px
       margin-top: 2px
