Keine fette Schrift für Toolbar-Menü

--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2778,6 +2778,9 @@ figure figcaption {
 /*------------- All Screen Sizes ------------- */
 /*------------------------------------------- */
 /*------------------------------------------- */
+#toolbar-item-administration-tray {
+  font-weight: normal; }
+
 header {
   padding-top: 20px;
   *zoom: 1; }
