--- a/web/themes/hsk_zymphonies/sass/_header.sass
+++ b/web/themes/hsk_zymphonies/sass/_header.sass
@@ -4,6 +4,9 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 
+#toolbar-item-administration-tray
+  font-weight: normal
+
 header
   &.main-header
     z-index: 1
