--- a/web/themes/hsk_zymphonies/sass/_forms.sass
+++ b/web/themes/hsk_zymphonies/sass/_forms.sass
@@ -33,6 +33,14 @@ form.webform-submission-anmeldung-als-vereinsmitglied-form
       &.form-text
         width: 100%
 
+form.webform-submission-kontakt-add-form
+  input
+    &.form-text, &.form-email
+      width: 100%
+
+
+
+
 
 /*------------------------------------------- */
 /*------------------------------------------- */
@@ -40,7 +48,10 @@ form.webform-submission-anmeldung-als-vereinsmitglied-form
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-tablet-portrait)
-
+  form.webform-submission-kontakt-add-form
+    .form-item
+      > label
+        display: block
 
 /* End Media Query Tablet Portrait */
 
@@ -106,6 +117,12 @@ form.webform-submission-anmeldung-als-vereinsmitglied-form
             display: none
           &.form-type-textarea
             margin-bottom: 1.56em
+  form.webform-submission-kontakt-add-form
+    input
+      &.form-text, &.form-email
+        width: auto
+
+
 
 
 /* End Media Query Tablet */
