--- a/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/web/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -4093,23 +4093,27 @@ nav#block-hsk-footer ul li a {
   overflow: hidden;
   visibility: hidden;
 }
-.path-frontpage #block-views-block-news-block-1 .views-row h3 {
-  margin-bottom: 2px;
+.path-frontpage #block-views-block-news-block-1 .views-row h3.field-content {
+  font-size: 20.15px;
+  font-size: 1.3rem;
+  margin-bottom: 0.5em;
 }
-.path-frontpage #block-views-block-news-block-1 .views-row h3 span.date {
+.path-frontpage #block-views-block-news-block-1 .views-row h3.field-content a {
+  display: block;
+}
+.path-frontpage #block-views-block-news-block-1 .views-row h3.field-content span.date {
   font-size: 12.4px;
   font-size: 0.8rem;
   color: #888;
   color: #999;
-}
-.path-frontpage #block-views-block-news-block-1 .views-row h3 span.date:before {
-  content: "- ";
+  display: block;
+  margin-top: 0.4em;
 }
 .path-frontpage #block-views-block-news-block-1 .views-row .views-field-title {
   margin-bottom: 3px;
 }
 .path-frontpage #block-views-block-news-block-1 .views-row .views-field-field-image {
-  margin: 5px 15px 0 0;
+  margin: 5px 15px 0.7em 0;
 }
 .path-frontpage #block-views-block-news-block-1 .views-field-created {
   font-size: 12.4px;
@@ -4237,6 +4241,15 @@ nav#block-hsk-footer ul li a {
 @media only screen and (min-width: 768px) {
   .path-frontpage #block-views-block-news-block-1 .views-row .views-field-field-image {
     float: left;
+  }
+  .path-frontpage #block-views-block-news-block-1 .views-row h3.field-content a {
+    display: inline;
+  }
+  .path-frontpage #block-views-block-news-block-1 .views-row h3.field-content span.date {
+    display: inline;
+  }
+  .path-frontpage #block-views-block-news-block-1 .views-row h3.field-content span.date:before {
+    content: "- ";
   }
 }
 /* End Media Query Tablet */
