--- a/web/themes/hsk_zymphonies/sass/_front.sass
+++ b/web/themes/hsk_zymphonies/sass/_front.sass
@@ -102,7 +102,7 @@
       +legacy-pie-clearfix
       margin-bottom: 15px
 
-      h3.field-content
+      h3.title
         +x-rem(font-size, 1.3)
         margin-bottom: 0.5em
         a
@@ -117,8 +117,10 @@
       .views-field-title
         margin-bottom: 3px
 
-      .views-field-field-image
+      .image-mobile
         margin: 5px 15px 0.7em 0
+      .views-field-field-image-1
+        display: none
     //a.views-more-link
     //  color: #999
     //  padding-left: 5px
@@ -233,7 +235,10 @@
     #block-views-block-news-block-1
       +make-md-column(6)
       .views-row
-        .views-field-field-image
+        .image-mobile
+          display: none
+        .views-field-field-image-1
+          display: block
           float: left
         h3.field-content
           a
